[project]
name = "hclink"
version = "3.1.2"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "numba>=0.61.0",
    "pyroaring>=1.0.0",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "typer>=0.15.2",
]

[project.scripts]
hclink = "hclink:hclink.app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
